--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <!-- <img src="assets/profile-pic.jpg" alt="Angel Molpeceres Mingo" class="profile-pic"> -->
                 
                 <h1>Angel Molpeceres Mingo</h1>
-                <p class="subtitle">Data Scientist | Big Data Analyst</p> 
+                <p class="subtitle">Data Scientist | Big Data & Business Analyst</p> 
                 
                 <div class="contact-info">
                     <p><i class="fas fa-envelope"></i> <a href="mailto:angelmolpeceresmingo@gmail.com">angelmolpeceresmingo@gmail.com</a></p>
@@ -56,9 +56,13 @@
             <!-- ==== CONTENT SECTIONS (Only one visible at a time) ==== -->
             <div class="content-section active" id="about-content">
                 <h2>About Me</h2>
-                 <p>
-                    Graduate in Applied Statistics with a strong foundation in Data Science and Programming. Currently pursuing a Master's in Big Data Analytics. Eager to develop my career in the Data and AI field, specifically in data science and analytics. Seeking opportunities to apply my skills in challenging data environments, learning from the best and contributing to innovative technology development. Strong teamwork and leadership skills. Great willingness to receive feedback and a perfectionist spirit. Ability to adapt and thrive in new environments.
-                </p>
+                <ul>
+                    <li>Graduate in Applied Statistics with a strong foundation in Data Science and Programming.</li>
+                    <li>Currently pursuing a Master's in Big Data Analytics.</li>
+                    <li>Eager to develop my career in the Data and AI field, specifically in data science and analytics.</li>
+                    <li>Seeking opportunities to apply my skills in challenging data environments, learning from the best and contributing to innovative technology development.</li>
+                    <li>Strong teamwork and leadership skills. Great willingness to receive feedback and a perfectionist spirit. Ability to adapt and thrive in new environments.</li>
+                </ul>
                 <div class="about-extras">
                     <div>
                         <h3>Languages</h3>
