--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <!-- ==== STATIC SIDEBAR (NAME CARD) ==== -->
         <aside id="sidebar">
             <div class="sidebar-content">
-                <!-- Optional: Add your photo here -->
-                <!-- <img src="assets/profile-pic.jpg" alt="Angel Molpeceres Mingo" class="profile-pic"> -->
+                
+                <img src="assets/FotoYoRepsol.jpg" alt="Foto de Angel Molpeceres Mingo" class="profile-pic">
                 
                 <h1>Angel Molpeceres Mingo</h1>
                 <p class="subtitle">Data Scientist | Big Data & Business Analyst</p> 
