--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <aside id="sidebar">
             <div class="sidebar-content">
                 <!-- Tu foto aquí -->
-                <img src="assets/tu_foto.jpg" alt="Angel Molpeceres Mingo" class="profile-pic">
+                <img src="assets/FotoYoRepsol.jpg" alt="Angel Molpeceres Mingo" class="profile-pic">
                 
                 <h1>Angel Molpeceres Mingo</h1>
                 <p class="subtitle">Data Scientist | Big Data Analyst</p> 
